# simple-blog

./: .gitignore  Cargo.toml  DATABASE_POOL_OPTIMIZATION.md  LOGGING_MIDDLEWARE.md  README.md  askama.toml  build-musl.sh  cargo.toml.bak  fffff.md  manage.sh  package-lock.json  package.json  postcss.config.js  purgecss.config.js  report.json  test_db_pool.sh  test_filetree.html  vite.config.js
.cargo/: config.toml
data/: blog.db  blog.db-shm  blog.db-wal
markdown/2026/01/: external-link-test.md
markdown/2026/01/29/: fffff.md
markdown/2026/01/31/: 代码块和流程图测试.md  波子汽水.md  测试附件上传.md  表格数学语法测试.md
markdown/2026/02/: test.md
markdown/2026/02/01/: Seven-days-end-with-you.md  dddd-mutiple.md  test attribute error in h1.md
markdown/2026/02/02/: Will h1 will display here?.md  Will h1 will display here?2.md  test-image-rendering.md  test-video-rendering.md  这是一个测试文章.md
markdown/2026/02/03/: 哈吉米的标题测试.md
markdown/2026/02/19/: 测试更新.md
scripts/: fix-scripts.js  optimize-css.js  optimize-html.js
src/: audio_metadata.rs  auth_utils.rs  embedded.rs  geoip.rs  http3_server.rs  id_generator.rs  jwt.rs  main.rs  music_sync.rs  view_batch.rs
src/cache/: mod.rs
src/config/: mod.rs
src/db/: init.rs  mod.rs  models.rs  repositories.rs
src/handlers/: mod.rs  page_handlers.rs
src/handlers/api_handlers/: about.rs  admin_friend_link.rs  analytics.rs  archive.rs  attachments.rs  auth.rs  categories.rs  comment.rs  crypto.rs  db_stats.rs  filemanager.rs  friend_link.rs  markdown_editor.rs  markdown_preview.rs  mod.rs  music.rs  passage.rs  settings.rs  stats.rs  sync.rs  tags.rs  upload.rs  user.rs
src/middleware/: auth.rs  logging.rs  mod.rs  ratelimit.rs
src/routes/: api_routes.rs  mod.rs  page_routes.rs  static_routes.rs
src/static/: mod.rs
src/templates/: mod.rs
static/css/: animations.css  passage-base.css
templates/: about.html  collect.html  friends.html  index.html  keyboard-test.html  markdown-editor.html  markdown-editor.html.bak  passage.html
templates/admin/: admin.html  filemanager.html
templates/css/: animations.css  dark-mode.css  filemanager.css  floating-text-mb0u05wn.css  floating-text.css  glass-effect.css  katex.min.css  keyboard-shortcuts.css  modal-animations.css  music-player.css  passage-base.css  passage.css  settings.css  tokyo-night-dark.min.css
templates/js/: about-focus-mode.js  chart.js  collect-focus-mode.js  ecc-encrypt.js  filemanager.js  floating-text.js  index.js  keyboard-shortcuts.js  login.js  markdown-preview-modal.js  modal-animations.js  music-player.js  passage-focus-mode.js  passage-shortcuts.js  passage.js
templates/js/npm/mathjax@3.2.2/es5/: tex-mml-chtml.js
templates/status/: 302.html  401.html  404.html  405.html  409.html  423.html  500.html  999.html
zig-blog/: .gitignore  QUICKSTART.md  README.md  build.zig
zig-blog/src/: auth.zig  config.zig  database.zig  http_server.zig  main.zig  markdown.zig  models.zig  repository.zig  template.zig  uuid.zig
