[package]
name = "rustblog"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5"
md-5 = "0.10"
tokio = { version = "1.49", features = ["full"] }
tera = "1.20"
chrono = { version = "0.4", features = ["serde"] }

# SQLite 数据库
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# 密码哈希
argon2 = "0.5"
rand = "0.8"
